[tool.poetry]
name = "rtgame"
version = "0.1.0"
description = ""
authors = ["cybenko.sergey <cybenko.sergey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
ordered-set = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
